Updated form styles to be used on multiple components

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   --transparent-background-light: rgba(255, 255, 255, 0.8);
   --transparent-background-dark: rgba(0, 20, 20, 0.8);
   --grayed: #9a9a9a;
+  --lightgray: rgb(240, 240, 240);
   --scroll-bar-color: #c5c5c5;
   --scroll-bar-bg-color: #f6f6f6;
   --border-radius-small: 4px;
@@ -55,6 +56,60 @@ body {
   left: 100%;
   transform: translateX(-100%);
 }
+
+/* #region Form */
+
+.styling-form {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  gap: 16px;
+  align-items: center;
+}
+
+.styling-form-note-label {
+  text-align: center;
+}
+
+.styling-form > .styling-form-note-input {
+  border-radius: var(--border-radius-small);
+  border: solid 1px lightgray;
+  height: 30px;
+  text-align: center;
+}
+
+.styling-form > .styling-form-select {
+  border-radius: var(--border-radius-small);
+  border: solid 1px lightgray;
+  height: 30px;
+  text-align: center;
+  background-color: transparent;
+}
+
+.styling-form > .styling-form-warning {
+  grid-column: span 2;
+  width: 100%;
+  text-align: center;
+  color: red;
+}
+
+.styling-form-submit {
+  grid-column: span 2;
+  background-color: var(--primary-color-dark);
+  color: white;
+  border: none;
+  border-radius: var(--border-radius-small);
+  height: 30px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.styling-form-submit:hover {
+  box-shadow: 0px 0px 4px 4px var(--primary-color-light-transparent);
+  transform: scaleX(1.02);
+  transition: all 0.3s;
+}
+
+/* #endregion Form */
 
 /* #region Tools side tab */
 
@@ -360,12 +415,6 @@ body {
 .spatial-tree-icon img:hover {
   animation: pulsing 1s alternate infinite ease;
 }
-
-@keyframes pulsing {
-  100% {
-    transform: scale(1.2);
-  }
-}
 /* #endregion Spatial Tree */
 
 /* #region saved views */
@@ -389,8 +438,8 @@ body {
   line-height: 25px;
 }
 
-.saved-add {
-  /**/
+.saved-add:hover {
+  animation: name duration timing-function delay iteration-count direction fill-mode;
 }
 
 #saved-views-list {
@@ -444,48 +493,6 @@ body {
   background: linear-gradient(-90deg, white, white, var(--primary-color-light));
   background-size: 200% 200%;
   background-color: var(--primary-color-light-transparent);
-}
-
-.saved-view-form {
-  display: grid;
-  grid-template-columns: max-content 1fr;
-  gap: 16px;
-  align-items: center;
-}
-
-.saved-view-form-note-label {
-  text-align: center;
-}
-
-#saved-view-form-note-input {
-  border-radius: var(--border-radius-small);
-  border: solid 1px lightgray;
-  height: 30px;
-  text-align: center;
-}
-
-#saved-view-form-warning {
-  grid-column: span 2;
-  width: 100%;
-  text-align: center;
-  color: red;
-}
-
-.saved-view-form-submit {
-  grid-column: span 2;
-  background-color: var(--primary-color-dark);
-  color: white;
-  border: none;
-  border-radius: var(--border-radius-small);
-  height: 30px;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.saved-view-form-submit:hover {
-  box-shadow: 0px 0px 4px 4px var(--primary-color-light-transparent);
-  transform: scaleX(1.02);
-  transition: all 0.3s;
 }
 
 /* #endregion saved views */
@@ -586,7 +593,11 @@ body {
   background-color: var(--primary-color-light-transparent);
 }
 
-/*  */
+/* Form */
+
+.annotation-form-input{
+  min-width: 280px;
+}
 
 /* #region Floating buttons features */
 
@@ -814,6 +825,70 @@ body {
 
 /* #endregion Modal */
 
+/* #region Context Menu */
+
+.context-menu-container{
+  position: fixed;
+  width: auto;
+  max-width: 280px;
+  padding: 4px;
+}
+.context-menu-container::before{
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+  width: 5px;
+  height: 5px;
+  background: var(--primary-color);
+  border: solid 1px white;
+  border-radius: 100%;
+  box-shadow: 0 0 3px 0px var(--primary-color-dark);
+}
+
+#context-menu-list {
+  list-style: none;
+  background-color: white;
+  border: solid 1px var(--primary-color-dark);
+  color: var(--primary-color-dark);
+  padding: 8px 8px;
+  border-radius: var(--border-radius-regular);
+  font-size: 13px;
+  display: grid;
+  gap: 4px;
+}
+
+#context-menu-list > li:not(.context-menu-seperator) {
+  padding: 0 4px;
+  cursor: pointer;
+  box-shadow: inset 18px 0 20px 0px rgba(255, 255, 255, 1);
+}
+
+#context-menu-list > li:hover {
+  background-color: var(--primary-color-light-transparent);
+  background: linear-gradient(-90deg, white, white, var(--primary-color-light));
+  background-size: 200% 200%;
+  background-color: var(--primary-color-light-transparent);
+}
+
+.context-menu-item{
+  list-style: none;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.context-menu-seperator{
+  background-color: var(--lightgray);
+  width: 100%;
+  height: 1px;
+  /* margin: 2px 0; */
+}
+
+/* #endregion Context Menu */
+
 /* #region animations */
 
 /* spinner */
@@ -985,6 +1060,12 @@ body {
   }
   100% {
     transform: translate(0px);
+  }
+}
+
+@keyframes pulsing {
+  100% {
+    transform: scale(1.2);
   }
 }
 
