--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
   --scroll-bar-bg-color: #f6f6f6;
   --border-radius-small: 4px;
   --border-radius-regular: 8px;
+  --font-family: Montserrat;
 }
 
 * {
@@ -39,7 +40,7 @@
 html,
 body {
   overflow: hidden;
-  font-family: Montserrat;
+  font-family: var(--font-family);
 }
 
 #three-canvas {
@@ -77,15 +78,10 @@ body {
   text-align: center;
 }
 
-.styling-form select.styling-form-input {
-  text-align: center;
-  background-color: transparent;
-  width: 100%;
-  cursor: pointer;
-}
-
 .styling-form-select-plus-add {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
   gap: 8px;
 }
 
@@ -122,6 +118,75 @@ body {
   transition: all 0.3s;
 }
 
+.styling-form-color-picker-wrapper {
+  height: 180px;
+}
+
+.styling-form-select{
+  display: grid;
+  grid-template-columns: 1fr 25px;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  font-size: 14px;
+}
+
+.styling-form-select > span{
+  padding: 0 4px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.styling-form-select > img{
+  transform: rotate(90deg);
+}
+
+.styling-form-select > ul{
+  list-style: none;
+  padding: 4px 0;
+  background-color: white;
+  z-index: 99;
+  grid-column: span 2;
+  width: 98%;
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translate(-50%);
+  border: solid 1px lightgray;
+  border-radius: var(--border-radius-small);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  display: grid;
+  overflow-y: scroll;
+}
+
+.styling-form-select > ul > li{
+  padding: 0 8px;
+  width: 100%;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  transition: background-color 0.3s;
+}
+
+.styling-form-select > ul > li > span{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.styling-form-select > ul > li:hover{
+  background-color: var(--primary-color-light-transparent);
+  transition: background-color 0.3s;
+}
+
+.annotation-category-select-colortag{
+  width: 8px;
+  height: 100%;
+}
+
 /* #endregion Form */
 
 /* #region Tools side tab */
@@ -133,7 +198,7 @@ body {
   display: inline-block;
   padding: 10px;
   height: 100vh;
-  font-family: Montserrat;
+  font-family: var(--font-family);
   overflow-y: scroll;
 }
 
@@ -617,8 +682,13 @@ body {
   min-width: 280px;
 }
 
-.styling-form-color-picker-wrapper {
-  height: 180px;
+.annotation-form-select-option-color {
+  position: absolute;
+  right: 20px;
+  top: 0;
+  width: 16px;
+  height: 100%;
+  transform: translateX(-100%);
 }
 
 /* #region Floating buttons features */
