--- a/styles.css
+++ b/styles.css
@@ -588,7 +588,7 @@ body {
   padding-bottom: 5px;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 25px;
+  grid-template-columns: 1fr 25px 25px;
   font-size: 14px;
   row-gap: 5px;
 }
@@ -618,6 +618,13 @@ body {
   display: none;
 }
 
+.annotation-list-group-icon-vis {
+  justify-self: center;
+  align-self: center;
+  cursor: pointer;
+  width: 20px;
+}
+
 .annotation-list-group-icon {
   transition: all 0.4s;
 }
@@ -627,8 +634,9 @@ body {
   transition: all 0.4s;
 }
 
+
 .annotation-list-group .annotation-list-group-list {
-  grid-column: span 2;
+  grid-column: span 3;
   margin: 0 30px 0 5px;
 }
 
