--- a/styles.css
+++ b/styles.css
@@ -590,15 +590,15 @@ body {
 /* #region annotations */
 
 .annotation-list-group {
-  padding-left: 5px;
+  /* padding-left: 5px; */
   padding-bottom: 5px;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 25px 25px;
+  grid-template-columns: 25px 1fr 25px;
   font-size: 14px;
   row-gap: 5px;
 }
-.annotation-list-group:not(:first-child) {
+.annotation-list-group {
   padding-top: 5px;
 }
 .annotation-list-group:last-child {
@@ -612,12 +612,15 @@ body {
   text-overflow: ellipsis;
 }
 
-.annotation-list-group:first-child {
+.annotation-list-group:first-child.annotation-list-group:not(.annotation-list-group-category){
   border-top: none;
 }
 
 .annotation-list-group-disabled {
   color: var(--grayed);
+}
+.annotation-list-group-disabled span {
+  grid-column: 2;
 }
 
 .annotation-list-group-disabled .caret {
@@ -640,13 +643,23 @@ body {
   transition: all 0.4s;
 }
 
-
-.annotation-list-group .annotation-list-group-list {
+.annotation-list-group ul {
   grid-column: span 3;
-  margin: 0 30px 0 5px;
+  padding-right: 8px;
 }
 
-.annotation-list-group .annotation-list-group-list > li {
+.annotation-list-group-category{
+  grid-template-columns: 25px 74px 1fr 25px;
+  font-size: 12px;
+}
+
+.annotation-list-group-category > ul{
+  padding-right: 0;
+  grid-column: span 4;
+  padding-right: 8px;
+}
+
+.annotation-list-group .annotation-list-group-category > ul > li {
   width: 100%;
   padding: 5px;
   display: grid;
@@ -658,33 +671,39 @@ body {
   border-top: 1px solid rgba(240, 240, 240);
 }
 
-.annotation-list-group-list li:hover {
+.annotation-list-group-category > ul > li:hover {
   background-color: var(--primary-color-light-transparent);
   background: linear-gradient(-90deg, white, white, var(--primary-color-light));
   background-size: 200% 200%;
   background-color: var(--primary-color-light-transparent);
 }
 
-.annotation-list-group-list li > img {
+.annotation-list-group-category > ul > li > img {
   height: 15px;
   transition: all 0.3s;
 }
 
-.annotation-list-group-list li > img:hover {
+.annotation-list-group-category > ul > li > img:hover {
   /* cursor: ; */
   transform: scale(1.1);
   transition: all 0.3s;
 }
 
-.annotation-list-group-list li > span {
-  font-size: 12px;
+.annotation-list-group-category > ul > li > span {
   line-height: 15px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
-.annotation-list-group-list li.active-annotation {
+.annotation-list-group-category .annotation-category-select-colortag{
+  width: calc(100% - 8px);
+  font-size: 12px;
+  display: grid;
+  place-items: center;
+}
+
+.annotation-list-group-category li.active-annotation {
   background-color: var(--primary-color-light-transparent);
   background: linear-gradient(-90deg, white, white, var(--primary-color-light));
   background-size: 200% 200%;
