--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ body {
   gap: 8px;
 }
 
-.styling-form-select-plus-add.annotation-category-selector li{
+.styling-form-select-plus-add.annotation-category-selector li {
   display: grid;
   grid-template-columns: 74px 1fr;
 }
@@ -133,7 +133,7 @@ body {
   height: 180px;
 }
 
-.styling-form-select{
+.styling-form-select {
   display: grid;
   grid-template-columns: 1fr 25px;
   align-items: center;
@@ -142,25 +142,25 @@ body {
   font-size: 14px;
 }
 
-.styling-form-select > span{
+.styling-form-select > span {
   padding: 0 4px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.styling-form-select > img{
+.styling-form-select > img {
   transform: rotate(90deg);
 }
 
-.styling-form-select > ul{
+.styling-form-select > ul {
   list-style: none;
   padding: 4px 0;
   background-color: white;
   z-index: 99;
   grid-column: span 2;
   width: 98%;
-  height: 30vh;
+  max-height: 30vh;
   position: absolute;
   left: 50%;
   top: 100%;
@@ -173,7 +173,7 @@ body {
   overflow-y: scroll;
 }
 
-.styling-form-select > ul > li{
+.styling-form-select > ul > li {
   padding: 0 8px;
   width: 100%;
   height: 24px;
@@ -183,13 +183,13 @@ body {
   transition: background-color 0.3s;
 }
 
-.styling-form-select > ul > li > span{
+.styling-form-select > ul > li > span {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.styling-form-select > ul > li:hover{
+.styling-form-select > ul > li:hover {
   background-color: var(--primary-color-light-transparent);
   transition: background-color 0.3s;
 }
@@ -202,7 +202,7 @@ body {
   place-items: center;
 }
 
-.annotation-category-select-colortag.undefined{
+.annotation-category-select-colortag.undefined {
   border: 1px dashed var(--grayed);
 }
 
@@ -620,7 +620,9 @@ body {
   text-overflow: ellipsis;
 }
 
-.annotation-list-group:first-child.annotation-list-group:not(.annotation-list-group-category){
+.annotation-list-group:first-child.annotation-list-group:not(
+    .annotation-list-group-category
+  ) {
   border-top: none;
 }
 
@@ -656,12 +658,12 @@ body {
   padding-right: 8px;
 }
 
-.annotation-list-group-category{
+.annotation-list-group-category {
   grid-template-columns: 25px 74px 1fr 25px;
   font-size: 12px;
 }
 
-.annotation-list-group-category > ul{
+.annotation-list-group-category > ul {
   padding-right: 0;
   grid-column: span 4;
   padding-right: 8px;
@@ -711,7 +713,8 @@ body {
   background-color: var(--primary-color-light-transparent);
 }
 
-#annotation-form-category-name, #annotation-form-category-reference {
+#annotation-form-category-name,
+#annotation-form-category-reference {
   width: 100%;
 }
 
