--- a/styles.css
+++ b/styles.css
@@ -732,7 +732,7 @@ body {
   width: 100%;
   padding: 5px;
   display: grid;
-  grid-template-columns: 15px auto 1fr;
+  grid-template-columns: 1fr 30px;
   gap: 5px;
   align-items: center;
   box-shadow: inset 18px 0 20px 0px rgba(255, 255, 255, 1);
