--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,21 @@ body {
   transition: background-color 0.3s;
 }
 
+.annotation-category-select-colortag {
+  height: 100%;
+  width: calc(100% - 8px);
+  font-size: 12px;
+  display: grid;
+  place-items: center;
+}
+
+.annotation-category-select-colortag.undefined {
+  border: 1px dashed var(--grayed);
+}
+
+/* #endregion Form */
+
+/* #region Extra options menu */
 .styling-menu-extras {
   width: 30px;
   height: 25px;
@@ -234,6 +249,7 @@ body {
 .styling-menu-extras.active > ul.styling-menu-extras-list {
   transform: translate(-100%, 0);
   opacity: 100%;
+  z-index: 1;
 }
 
 .styling-menu-extras > ul.styling-menu-extras-list > li {
@@ -252,20 +268,7 @@ body {
   background-color: var(--primary-color-light-transparent);
   transition: all 0.5s;
 }
-
-.annotation-category-select-colortag {
-  height: 100%;
-  width: calc(100% - 8px);
-  font-size: 12px;
-  display: grid;
-  place-items: center;
-}
-
-.annotation-category-select-colortag.undefined {
-  border: 1px dashed var(--grayed);
-}
-
-/* #endregion Form */
+/* #endregion Extra options menu */
 
 /* #region Tools side tab */
 
@@ -792,6 +795,8 @@ body {
   transform: translateX(-100%);
 }
 
+/* #endregion annotations */
+
 /* #region Floating buttons features */
 
 .features-floating-buttons {
@@ -856,6 +861,7 @@ body {
 /* #region popup with header */
 
 .popup-header-wrapper {
+  max-width: 80vw;
   background-color: white;
   border: var(--primary-color-dark) 1px solid;
   border-radius: var(--border-radius-regular);
@@ -980,7 +986,7 @@ body {
 
 @media only screen and (max-width: 889px) {
   .popup-header-wrapper {
-    width: 95%;
+    max-width: 95%;
   }
 
   .popup-header-subtitle {
@@ -1081,6 +1087,58 @@ body {
 }
 
 /* #endregion Context Menu */
+
+/* #region confirmation popup */
+.confirmation-popup-wrapper{
+  max-width: 50vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+  place-items: center;
+}
+
+@media only screen and (max-width: 889px) {
+  .confirmation-popup-wrapper {
+    max-width: 100%;
+  }
+}
+
+.confirmation-popup-wrapper > span{
+  padding: 8px 4px;
+  grid-column: span 2;
+  text-align: center;
+  line-height: 28px;
+}
+
+.confirmation-popup-wrapper > div{
+  width: 100%;
+  text-align: center;
+  padding: 8px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: var(--border-radius-small);
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.confirmation-popup-wrapper .confirm{
+  border-color: darkgreen;
+  background-color: green;
+  color: white;
+}
+
+.confirmation-popup-wrapper .reject{
+  border-color: darkred;
+  background-color: red;
+  color: white;
+}
+
+.confirmation-popup-wrapper .cancel{
+  border-color: black;
+  background-color: gray;
+  color: white;
+}
+/* #endregion confirmation popup */
 
 /* #region animations */
 
