--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
   --border-radius-small: 4px;
   --border-radius-regular: 8px;
   --font-family: Montserrat;
+  --transition-main-timer: 0.28s
 }
 
 * {
@@ -92,11 +93,11 @@ body {
 
 .styling-form-icon {
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 .styling-form-icon:hover {
   transform: scale(1.1);
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 
 .styling-form > .styling-form-warning {
@@ -120,13 +121,13 @@ body {
   border-radius: var(--border-radius-small);
   height: 30px;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 
 .styling-form-submit:hover {
   box-shadow: 0px 0px 4px 4px var(--primary-color-light-transparent);
   transform: scaleX(1.02);
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 
 .styling-form-color-picker-wrapper {
@@ -180,7 +181,7 @@ body {
   display: flex;
   align-items: center;
   gap: 8px;
-  transition: background-color 0.3s;
+  transition: background-color var(--transition-main-timer);
 }
 
 .styling-form-select > ul > li > span {
@@ -191,7 +192,7 @@ body {
 
 .styling-form-select > ul > li:hover {
   background-color: var(--primary-color-light-transparent);
-  transition: background-color 0.3s;
+  transition: background-color var(--transition-main-timer);
 }
 
 .annotation-category-select-colortag {
@@ -219,11 +220,11 @@ body {
 }
 
 .styling-menu-extras > img {
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 
 .styling-menu-extras > img:hover {
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
   transform: scale(1.1);
 }
 
@@ -631,13 +632,13 @@ body {
 
 #saved-views-list li > img {
   height: 15px;
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 
 #saved-views-list li > img:hover {
   /* cursor: ; */
   transform: scale(1.1);
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 
 #saved-views-list li > span {
@@ -752,13 +753,13 @@ body {
 
 .annotation-list-group-category > ul > li > img {
   height: 15px;
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 
 .annotation-list-group-category > ul > li > img:hover {
   /* cursor: ; */
   transform: scale(1.1);
-  transition: all 0.3s;
+  transition: all var(--transition-main-timer);
 }
 
 .annotation-list-group-category > ul > li > span {
@@ -1116,25 +1117,29 @@ body {
   padding: 8px;
   border-style: solid;
   border-width: 1px;
+  border-color: var(--primary-color-dark);
   border-radius: var(--border-radius-small);
   cursor: pointer;
   font-weight: 600;
+  transition: all var(--transition-main-timer);
+}
+
+.confirmation-popup-wrapper > div:hover{
+  transform: scale(1.05);
+  transition: all var(--transition-main-timer);
 }
 
 .confirmation-popup-wrapper .confirm{
-  border-color: darkgreen;
   background-color: green;
   color: white;
 }
 
 .confirmation-popup-wrapper .reject{
-  border-color: darkred;
   background-color: red;
   color: white;
 }
 
 .confirmation-popup-wrapper .cancel{
-  border-color: black;
   background-color: gray;
   color: white;
 }
