--- a/styles.css
+++ b/styles.css
@@ -130,9 +130,9 @@ body {
   transition: all var(--transition-main-timer);
 }
 
-.styling-form-color-picker-wrapper {
+/* .styling-form-color-picker-wrapper {
   height: 180px;
-}
+} */
 
 .styling-form-select {
   display: grid;
