--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ body {
   width: 100%;
   display: grid;
   place-items: center;
+  color: red;
 }
 
 .styling-form > .styling-form-warning > span {
