Updated css file for navbar

--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -6,6 +6,14 @@
     
 }
 
+.feature-navbar-item.active{
+    
+}
+
 .feature-navbar-item-dropdown{
 
+}
+
+.feature-navbar-item-dropdown-item{
+    
 }
