--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
   top: 0;
   left: 0;
   outline: none;
-  background-image: linear-gradient(0, #529554a4 0%, #9de7fca4 80%);
+  background-image: linear-gradient(0deg, white 0%, var(--primary-color-light) 100%);
 }
 
 #file-input {
@@ -1349,6 +1349,7 @@ body {
 /* Debug */
 
 .stats {
-  left: 50% !important;
-  transform: translateX(-50%);
+  left: calc(50%) !important;
+  top: calc(100% - 16px) !important;
+  transform: translate(-50%, -100%);
 }
