--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -1,19 +1,82 @@
-.feature-navbar{
-
+:root {
+  --color-shadow: #cecece4f;
+  --color-neutral-light: #ececec;
 }
 
-.feature-navbar-item{
-    
+.feature-navbar {
+  font-weight: 400;
+  position: fixed;
+  z-index: 99;
+  left: 50%;
+  top: 16px;
+  transform: translate(-50%);
+  box-shadow: 0px 0px 8px var(--color-shadow),
+    inset 0px -1px var(--color-neutral-light);
+  font-size: 0.9rem;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  z-index: 2;
+  width: fit-content;
+  background: white;
+  align-self: center;
+  border-radius: var(--border-radius-regular);
+  color: black;
+  height: 50px;
 }
 
-.feature-navbar-item.active{
-    
+.feature-navbar li {
+  color: gray;
 }
 
-.feature-navbar-item-dropdown{
-
+.feature-navbar-item {
+  text-decoration: none;
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 1rem;
+  font-size: 0.9rem;
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  position: relative;
+  z-index: 2;
+  width: max-content;
+  height: 100%;
 }
 
-.feature-navbar-item-dropdown-item{
-    
+.feature-navbar-item > img {
+  transform: rotate(90deg);
+  margin-left: 6px;
+  width: 11px;
+  place-self: center;
+}
+
+.feature-navbar-item.active {
+  background-color: var(--primary-color-light-transparent);
+  color: black;
+  box-shadow: inset 0px -3px var(--primary-color);
+}
+
+.feature-navbar-item-dropdown {
+  margin: 16px 0 0 -8px;
+  grid-column: span 2;
+  background-color: white;
+  min-width: calc(100% + 16px);
+  width: max-content;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.feature-navbar-item-dropdown-item {
+  float: none;
+  color: black;
+  padding: 1rem;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.feature-navbar li:hover {
+  color: var(--primary-color-dark);
 }
