--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -5,24 +5,50 @@
   width: 350px;
   height: 100vh;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  background-color: white;
+  grid-template-rows: 1fr 50px;
+  background-color: lightgray;
+}
+
+.main-sidebar-features {
+  display: grid;
+  grid-template-rows: repeat(2, 50%);
+  gap: 1px;
+}
+
+.main-sidebar-feature-tabs-wrapper {
+  background-color: gold;
 }
 
 .main-sidebar-feature {
+  background-color: white;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  display: grid;
+  grid-template-columns: 1fr 25px;
+  grid-template-rows: auto 1fr;
+  gap: var(--border-radius-regular);
+  padding: var(--border-radius-regular);
+}
+
+.main-sidebar-feature:only-child {
+  grid-row: span 2;
 }
 
 .main-sidebar-feature > span {
+  font-weight: 500;
+  display: flex;
+  align-items: center;
 }
 
 .main-sidebar-feature > img {
 }
 
-.main-sidebar-feature.solo {
-  grid-row: span 2;
-}
-
-.main-sidebar-feature-tabs-wrapper {
+.main-sidebar-feature > .main-sidebar-feature-content {
+  grid-column: span 2;
+  border-top: solid 1px lightgray;
+  padding-top: var(--border-radius-regular);
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .main-sidebar-feature-tab {
