--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -5,18 +5,16 @@
   width: 350px;
   height: 100vh;
   display: grid;
-  grid-template-rows: 1fr 50px;
+  grid-template-rows: 1fr auto;
+  gap: 2px;
   background-color: lightgray;
 }
 
 .main-sidebar-features {
+  width: inherit;
   display: grid;
   grid-template-rows: repeat(2, 50%);
   gap: 1px;
-}
-
-.main-sidebar-feature-tabs-wrapper {
-  background-color: gold;
 }
 
 .main-sidebar-feature {
@@ -41,7 +39,7 @@
 }
 
 .main-sidebar-feature > img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .main-sidebar-feature > .main-sidebar-feature-content {
@@ -52,8 +50,32 @@
   overflow-y: scroll;
 }
 
+#main-sidebar-feature-tabs-wrapper {
+  width: inherit;
+  display: flex;
+  justify-content: space-between;
+  gap: 1px;
+  overflow-x: scroll;
+  background-color: transparent;
+}
+
 .main-sidebar-feature-tab {
+  cursor: pointer;
+  color: gray;
+  width: 100%;
+  min-width: max-content;
+  background-color: white;
+  text-align: center;
+  padding: 4px 8px;
 }
 
 .main-sidebar-feature-tab:hover {
+    
+  color: var(--primary-color-dark)
+}
+
+.main-sidebar-feature-tab.active {
+  background-color: var(--primary-color-light-transparent);
+  color: black;
+  box-shadow: inset 0px -3px var(--primary-color);
 }
