--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -47,7 +47,7 @@
   border-top: solid 1px lightgray;
   padding-top: var(--border-radius-regular);
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #main-sidebar-feature-tabs-wrapper {
@@ -55,7 +55,7 @@
   display: flex;
   justify-content: space-between;
   gap: 1px;
-  overflow-x: scroll;
+  overflow-x: auto;
   background-color: transparent;
 }
 
