--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -1,21 +1,38 @@
-#main-sidebar {
+.main-sidebar{
   position: fixed;
-  left: 0;
-  top: 0;
   width: 350px;
   height: 100vh;
   display: grid;
-  grid-template-rows: 1fr auto;
-  gap: 2px;
+  grid-template-rows: repeat(2, 50%);
+  gap: 1px;
   background-color: lightgray;
 }
 
-.main-sidebar-features {
+.main-sidebar:empty {
+  background-color: white;
+}
+
+#left-sidebar {
+  left: 0;
+  top: 0;
+}
+
+#right-sidebar {
+  left: 100%;
+  top: 0;
+  transform: translateX(-100%);
+}
+
+/* .main-sidebar-features {
   width: inherit;
   display: grid;
   grid-template-rows: repeat(2, 50%);
   gap: 1px;
-}
+} */
+
+/* .main-sidebar-features:empty {
+  background-color: white;
+} */
 
 .main-sidebar-feature {
   background-color: white;
