- Implemented sidebar menu for annotations opening when creating a annotation - Fixed sidebar menu extra options menus list styling

--- a/styles.css
+++ b/styles.css
@@ -241,6 +241,7 @@ body {
 }
 
 .styling-menu-extras > ul.styling-menu-extras-list {
+  list-style: none;
   width: max-content;
   position: fixed;
   background-color: white;
