--- a/src/assets/css/properties.css
+++ b/src/assets/css/properties.css
@@ -36,6 +36,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2px;
+  box-shadow: inset 0 -1px 0 0 var(--primary-color-light-transparent);
 }
 
 .properties-line-label {
